# gamemaster-mcp

./: .env.example  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  ROADMAP.md  demo.py  dev.bat  dev.sh  mypy.ini  package.json.bak  pyproject.toml  requirements.txt  test_basic.py  verify_compliance.py
.roo/: FastMCP_2.8.0_docs.md
.roo/rules/: DEVELOPMENT.md  llm_dev_guide.md
docs/: DEVELOPMENT.md  FastMCP_2.9.0_docs.md  ROADMAP.md  STORAGE_STRUCTURE.md
example/dnd/: example.md
src/: main.py
src/dnd_mcp_server/: __init__.py  __main__.py  main.py  storage.py
src/gamemaster_mcp/: __init__.py  __main__.py  logutils.py  main.py  models.py  storage.py
